# bigplanet

./: .buildinfo  .buildinfo.bak  .gitignore  .pre-commit-config.yaml  Keys.html  LICENSE  README.md  Script.html  codecov.yml  commandline.html  environment.yml  examples.html  filetypes.html  genindex.html  help.html  index.html  inputfile.html  install.html  objects.inv  options.html  pyproject.toml  pytest.ini  quickstart.html  search.html  searchindex.js  setup.py  testing.html
.claude/: PHASE1_PROGRESS.md  SESSION_SUMMARY.md  claude.md
.github/workflows/: docs.yml  pip-install.yml  tests.yml  wheels.yml
_sources/: Script.rst.txt  commandline.rst.txt  examples.rst.txt  filetypes.rst.txt  help.rst.txt  index.rst.txt  install.rst.txt  quickstart.rst.txt  testing.rst.txt
bigplanet/: __init__.py  archive.py  bigplanet.py  bigplanet_archive.py  bigplanet_filter.py  bigplanet_module.py  bp_extract.py  bp_get.py  bp_process.py  bpstatus.py  extract.py  filter.py  process.py  read.py
docs/: Keys.rst  Script.rst  commandline.rst  conf.py  examples.rst  filetypes.rst  help.rst  index.rst  inputfile.rst  install.rst  options.rst  quickstart.rst
tests/: .gitignore  BP_Extract.md5  __init__.py  conftest.py
tests/Bpstatus/: .BP_Status  .BP_Status_BPL  test_bpstatus.py  vspace.in
tests/CreateHDF5/: bpl.in  test_CreateHDF5.py  test_bpcreatehdf5.py
tests/Extract/: test_bpextract.py
tests/ExtractArchive/: __init__.py  bpl.in  test_ExtractArchive.py  test_bpextract.py
tests/ExtractFilterArchive/: bpl.in  test_ExtractFilterArchive.py  test_bpextractfilterarchive.py
(+73 files in other folders)
